python/tapl-lang/tests/pythonlike/goldens/function_error.output
====== layer=1 exit-status:1 stdout:

------ stderr:
Traceback (most recent call last):
  File "/Users/orti/github/tapl/python/tapl-lang/tests/pythonlike/goldens/function_error1.py", line 8, in <module>
    s0.one = s0.api__tapl.create_function([], one())
                                              ~~~^^
  File "/Users/orti/github/tapl/python/tapl-lang/tests/pythonlike/goldens/function_error1.py", line 6, in one
    s1.api__tapl.add_return_type(s1, s1.Int)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^
  File "/Users/orti/github/tapl/python/tapl-lang/src/tapl_lang/lib/utils.py", line 40, in add_return_type
    raise TypeError(f'Return type mismatch: expected {s.return_type}, got {return_type}.')
TypeError: Return type mismatch: expected Str, got Int.

------ end.

